--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8">
   <title>ProyectoAngular</title>
   <base href="/">
-
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
